# store-sales-demand-forecasting

./: .dockerignore  .gitignore  Dockerfile  EvidentlyDockerfile  Makefile  README.md  dev-compose.yml  garage.toml  pyproject.toml  requirements.txt  start_garage.sh
.astro/: config.yaml
.github/workflows/: ci-cd.yml
dags/: feature_pipeline.py  inference_pipeline.py  monitoring_pipeline.py  training_pipeline.py
notebooks/: avg-sales-eda.ipynb  baseline-forecast.ipynb  decision-tree-model.ipynb  feature-target-eda.ipynb
src/ssdf/: __init__.py  config.py  data.py  data_io.py
src/ssdf/features/: feature.py  utils.py
src/ssdf/inference/: predict.py  submission.py
src/ssdf/monitoring/: dashboard.py  metrics.py  sim_monitoring.py  utils.py
src/ssdf/training/: eval.py  model.py  train.py  tune.py  utils.py
tests/: conftest.py  data_io_test.py
tests/dags/: dags_test.py
tests/features/: feature_test.py
tests/inference/: predict_test.py  submission_test.py
tests/monitoring/: metrics_test.py  utils_test.py
tests/source_etl/: data_test.py
tests/training/: eval_test.py  train_test.py  tune_test.py
