[project]
name = "ssdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kehinde Olalusi" }
]
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.21",
    "kagglehub>=1.0.0",
    "mlflow>=3.11.1",
    "mlforecast>=1.0.31",
    "numpy>=2.4.4",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.4.0",
    "statsmodels>=0.14.6",
    "universal-pathlib>=0.3.10",
]

[project.scripts]
ssdf = "ssdf:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "apache-airflow>=3.2.1",
    "pendulum>=3.2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.3",
    "seaborn>=0.13.2",
]
